--- a/package.json
+++ b/package.json
@@ -9,11 +9,29 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.8",
+    "@react-navigation/native-stack": "^6.9.9",
+    "@react-navigation/stack": "^6.3.18",
     "expo": "~47.0.12",
+    "expo-cli": "^6.3.10",
+    "expo-location": "~15.0.1",
     "expo-status-bar": "~1.4.2",
-    "firebase": "^9.6.11",
+    "firebase": "^9.17.1",
     "react": "18.1.0",
-    "react-native": "0.70.5"
+    "react-dom": "^18.2.0",
+    "react-native": "0.70.5",
+    "react-native-autocomplete-input": "^5.2.0",
+    "react-native-firebase": "^5.6.0",
+    "react-native-gesture-handler": "^2.13.1",
+    "react-native-google-places-autocomplete": "^2.5.1",
+    "react-native-image-picker": "^7.0.0",
+    "react-native-maps": "1.3.2",
+    "react-native-placesearch": "^4.0.1",
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-screens": "~3.18.0",
+    "react-native-web": "~0.18.7",
+    "remove-node-modules": "^1.7.6",
+    "expo-permissions": "~14.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
