--- a/package.json
+++ b/package.json
@@ -9,17 +9,19 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.19.3",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/native-stack": "^6.9.9",
     "@react-navigation/stack": "^6.3.18",
-    "expo": "~47.0.12",
-    "expo-cli": "^6.3.10",
+    "expo": "^44.0.6",
+    "expo-cli": "^4.0.17",
     "expo-location": "~15.0.1",
+    "expo-permissions": "~14.0.0",
     "expo-status-bar": "~1.4.2",
     "firebase": "^9.17.1",
-    "react": "18.1.0",
+    "react": "18.2.0",
     "react-dom": "^18.2.0",
-    "react-native": "0.70.5",
+    "react-native": "0.72.6",
     "react-native-autocomplete-input": "^5.2.0",
     "react-native-firebase": "^5.6.0",
     "react-native-gesture-handler": "^2.13.1",
@@ -29,9 +31,10 @@
     "react-native-placesearch": "^4.0.1",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
+    "react-native-uuid": "^2.0.1",
     "react-native-web": "~0.18.7",
     "remove-node-modules": "^1.7.6",
-    "expo-permissions": "~14.0.0"
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
